[build-system]
requires      = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "img2ascii"
version = "1.1.0"
description = "Library and a CLI tool to convert images to ascii"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
  "numpy>=1.23",
  "requests>=2.31",
  "pillow>=10.2"
]

[project.scripts]
img2ascii = "img2ascii.img2ascii:main"
